--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="/auto_jupyterbook/intro">
-  <script>location="/auto_jupyterbook/intro"</script>
-  <meta http-equiv="refresh" content="0; url=/auto_jupyterbook/intro">
+  <link rel="canonical" href="/book/intro">
+  <script>location="/book/intro"</script>
+  <meta http-equiv="refresh" content="0; url=/book/intro">
   <meta name="robots" content="noindex">
   <h1>Redirecting&hellip;</h1>
-  <a href="/auto_jupyterbook/intro">Click here if you are not redirected.</a>
+  <a href="/book/intro">Click here if you are not redirected.</a>
 </html>
