deploy: d57cf1015b52d1acc5b2cba74ed277ebdb4ed751

--- a/genindex.html
+++ b/genindex.html
@@ -67,16 +67,16 @@
   
   <ul class="nav sidenav_l1">
   <li class="">
-    <a href="notebooks/intro.html">Landing page</a>
+    <a href="intro.html">Landing page</a>
   </li>
   <li class="">
-    <a href="notebooks/coding/intro.html">Coding</a>
+    <a href="coding/intro.html">Coding</a>
   </li>
   <li class="">
-    <a href="notebooks/mathematics/intro.html">Mathematics</a>
+    <a href="mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="notebooks/geosciences/intro.html">Geosciences</a>
+    <a href="geosciences/intro.html">Geosciences</a>
   </li>
   <li class="active">
     <a href="">Index</a>
@@ -156,7 +156,7 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="notebooks/coding/Pandas.html#index-0">Pandas</a>
+      <li><a href="coding/Pandas.html#index-0">Pandas</a>
 </li>
   </ul></td>
 </tr></table>
