deploy: f360b701970e3f06e57b4efb00eef91e0d8af2d8

--- a/mathematics/Big_O_notation.html
+++ b/mathematics/Big_O_notation.html
@@ -89,6 +89,9 @@
       <a href="Timestepping_an_ODE.html">Timestepping An Ode</a>
     </li>
     <li class="">
+      <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
+    </li>
+    <li class="">
       <a href="Tensors_Review.html">Tensors Review</a>
     </li>
   </ul>
