--- a/mathematics/Timestepping_an_ODE.html
+++ b/mathematics/Timestepping_an_ODE.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Review of tensors" href="Tensors_Review.html" />
+    <link rel="next" title="Basic definitions and operations" href="Basic_definitions_and_operations.html" />
     <link rel="prev" title="Big O notation" href="Big_O_notation.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -87,6 +87,9 @@
     </li>
     <li class="active">
       <a href="">Timestepping An Ode</a>
+    </li>
+    <li class="">
+      <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
     </li>
     <li class="">
       <a href="Tensors_Review.html">Tensors Review</a>
@@ -367,7 +370,7 @@ $$</p>
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Big_O_notation.html" title="previous page">Big O notation</a>
-    <a class='right-next' id="next-link" href="Tensors_Review.html" title="next page">Review of tensors</a>
+    <a class='right-next' id="next-link" href="Basic_definitions_and_operations.html" title="next page">Basic definitions and operations</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
