--- a/mathematics/Taylor_series.html
+++ b/mathematics/Taylor_series.html
@@ -89,6 +89,9 @@
       <a href="Timestepping_an_ODE.html">Timestepping An Ode</a>
     </li>
     <li class="">
+      <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
+    </li>
+    <li class="">
       <a href="Tensors_Review.html">Tensors Review</a>
     </li>
   </ul>
