--- a/mathematics/Tensors_Review.html
+++ b/mathematics/Tensors_Review.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Geosciences" href="../geosciences/intro.html" />
-    <link rel="prev" title="Basic definitions and operations" href="Basic_definitions_and_operations.html" />
+    <link rel="prev" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="Timestepping_an_ODE.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -87,9 +87,6 @@
     </li>
     <li class="">
       <a href="Timestepping_an_ODE.html">Timestepping An Ode</a>
-    </li>
-    <li class="">
-      <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
     </li>
     <li class="active">
       <a href="">Tensors Review</a>
@@ -344,7 +341,7 @@ c_k \mathbf{\hat{e}}_k\cdot\mathbf{\hat{e}}_k=c_k=a_i b_j (\mathbf{\hat{e}}_i\ti
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Basic_definitions_and_operations.html" title="previous page">Basic definitions and operations</a>
+    <a class='left-prev' id="prev-link" href="Timestepping_an_ODE.html" title="previous page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
     <a class='right-next' id="next-link" href="../geosciences/intro.html" title="next page">Geosciences</a>
 
     </div>
