deploy: cc46d3f4e551a796788edee2fffe622306da5feb

--- a/mathematics/Taylor_series.html
+++ b/mathematics/Taylor_series.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Big O notation" href="Big_O_notation.html" />
-    <link rel="prev" title="Introduction to statistics for Geoscientists" href="Statistics_for_Geoscientists.html" />
+    <link rel="prev" title="Vectors" href="Testing.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -78,6 +78,9 @@
   <ul class="nav sidenav_l2">
     <li class="">
       <a href="Statistics_for_Geoscientists.html">Statistics For Geoscientists</a>
+    </li>
+    <li class="">
+      <a href="Testing.html">Testing</a>
     </li>
     <li class="active">
       <a href="">Taylor Series</a>
@@ -412,7 +415,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Statistics_for_Geoscientists.html" title="previous page">Introduction to statistics for Geoscientists</a>
+    <a class='left-prev' id="prev-link" href="Testing.html" title="previous page">Vectors</a>
     <a class='right-next' id="next-link" href="Big_O_notation.html" title="next page">Big O notation</a>
 
     </div>
