deploy: 221230722cdad831e0a0da5d2ba42b6cdd763f95

--- a/geosciences/Dynamic_Earth.html
+++ b/geosciences/Dynamic_Earth.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Tides" href="Tides.html" />
+    <link rel="next" title="Google Earth Engine" href="Google_Earth_Engine_Getting_Started.html" />
     <link rel="prev" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -92,6 +92,9 @@
       <a href="">Dynamic Earth</a>
     </li>
     <li class="">
+      <a href="Google_Earth_Engine_Getting_Started.html">Google Earth Engine Getting Started</a>
+    </li>
+    <li class="">
       <a href="Tides.html">Tides</a>
     </li>
     <li class="">
@@ -101,7 +104,7 @@
       <a href="Seismology.html">Seismology</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
+      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine</a>
     </li>
   </ul>
   </li>
@@ -831,7 +834,7 @@ Number of points within 2*RMS = 97.10 %.
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Cartography_Cartopy.html" title="previous page">Creating maps in Cartopy</a>
-    <a class='right-next' id="next-link" href="Tides.html" title="next page">Tides</a>
+    <a class='right-next' id="next-link" href="Google_Earth_Engine_Getting_Started.html" title="next page">Google Earth Engine</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
