--- a/geosciences/Wave_dispersion.html
+++ b/geosciences/Wave_dispersion.html
@@ -92,6 +92,9 @@
       <a href="Dynamic_Earth.html">Dynamic Earth</a>
     </li>
     <li class="">
+      <a href="Google_Earth_Engine_Getting_Started.html">Google Earth Engine Getting Started</a>
+    </li>
+    <li class="">
       <a href="Tides.html">Tides</a>
     </li>
     <li class="active">
@@ -101,7 +104,7 @@
       <a href="Seismology.html">Seismology</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
+      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine</a>
     </li>
   </ul>
   </li>
