--- a/geosciences/Tides.html
+++ b/geosciences/Tides.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Waves" href="Wave_dispersion.html" />
-    <link rel="prev" title="Google Earth Engine" href="Google_Earth_Engine_Getting_Started.html" />
+    <link rel="prev" title="Dynamic Earth and Planets" href="Dynamic_Earth.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -91,9 +91,6 @@
     <li class="">
       <a href="Dynamic_Earth.html">Dynamic Earth</a>
     </li>
-    <li class="">
-      <a href="Google_Earth_Engine_Getting_Started.html">Google Earth Engine Getting Started</a>
-    </li>
     <li class="active">
       <a href="">Tides</a>
     </li>
@@ -104,7 +101,10 @@
       <a href="Seismology.html">Seismology</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine</a>
+      <a href="Google_Earth_Engine_Foundations_.html">Google Earth Engine</a>
+    </li>
+    <li class="">
+      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
     </li>
   </ul>
   </li>
@@ -489,7 +489,7 @@ where <span class="math notranslate nohighlight">\(\omega_1=\frac{360^\circ}{24.
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Google_Earth_Engine_Getting_Started.html" title="previous page">Google Earth Engine</a>
+    <a class='left-prev' id="prev-link" href="Dynamic_Earth.html" title="previous page">Dynamic Earth and Planets</a>
     <a class='right-next' id="next-link" href="Wave_dispersion.html" title="next page">Waves</a>
 
     </div>
