--- a/geosciences/intro.html
+++ b/geosciences/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="IMAGE FILTERING" href="Image_Filtering.html" />
-    <link rel="prev" title="Review of tensors" href="../mathematics/Tensors_Review.html" />
+    <link rel="prev" title="Theory" href="../mathematics/linear algebra/Theory.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -92,9 +92,6 @@
       <a href="Dynamic_Earth.html">Dynamic Earth</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Getting_Started.html">Google Earth Engine Getting Started</a>
-    </li>
-    <li class="">
       <a href="Tides.html">Tides</a>
     </li>
     <li class="">
@@ -104,7 +101,10 @@
       <a href="Seismology.html">Seismology</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine</a>
+      <a href="Google_Earth_Engine_Foundations_.html">Google Earth Engine</a>
+    </li>
+    <li class="">
+      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
     </li>
   </ul>
   </li>
@@ -204,7 +204,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../mathematics/Tensors_Review.html" title="previous page">Review of tensors</a>
+    <a class='left-prev' id="prev-link" href="../mathematics/linear algebra/Theory.html" title="previous page">Theory</a>
     <a class='right-next' id="next-link" href="Image_Filtering.html" title="next page">IMAGE FILTERING</a>
 
     </div>
