--- a/mathematics/Statistics_for_Geoscientists.html
+++ b/mathematics/Statistics_for_Geoscientists.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Vectors" href="Testing.html" />
+    <link rel="next" title="Taylor series" href="Taylor_series.html" />
     <link rel="prev" title="Mathematics" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -80,9 +80,6 @@
       <a href="">Statistics For Geoscientists</a>
     </li>
     <li class="">
-      <a href="Testing.html">Testing</a>
-    </li>
-    <li class="">
       <a href="Taylor_series.html">Taylor Series</a>
     </li>
     <li class="">
@@ -93,6 +90,9 @@
     </li>
     <li class="">
       <a href="Tensors_Review.html">Tensors Review</a>
+    </li>
+    <li class="">
+      <a href="linear algebra/intro.html">Linear Algebra</a>
     </li>
   </ul>
   </li>
@@ -1048,7 +1048,7 @@ Group 2 p-value = 0.00040.
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Mathematics</a>
-    <a class='right-next' id="next-link" href="Testing.html" title="next page">Vectors</a>
+    <a class='right-next' id="next-link" href="Taylor_series.html" title="next page">Taylor series</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
