--- a/mathematics/Timestepping_an_ODE.html
+++ b/mathematics/Timestepping_an_ODE.html
@@ -80,9 +80,6 @@
       <a href="Statistics_for_Geoscientists.html">Statistics For Geoscientists</a>
     </li>
     <li class="">
-      <a href="Testing.html">Testing</a>
-    </li>
-    <li class="">
       <a href="Taylor_series.html">Taylor Series</a>
     </li>
     <li class="">
@@ -93,6 +90,9 @@
     </li>
     <li class="">
       <a href="Tensors_Review.html">Tensors Review</a>
+    </li>
+    <li class="">
+      <a href="linear algebra/intro.html">Linear Algebra</a>
     </li>
   </ul>
   </li>
