deploy: 34d8eac5743672083dc27ec67f373e656a101fff

--- a/geosciences/intro.html
+++ b/geosciences/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="IMAGE FILTERING" href="Image_Filtering.html" />
-    <link rel="prev" title="Theory" href="../mathematics/linear algebra/Theory.html" />
+    <link rel="prev" title="Theory" href="../mathematics/linear_algebra/Theory.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -204,7 +204,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../mathematics/linear algebra/Theory.html" title="previous page">Theory</a>
+    <a class='left-prev' id="prev-link" href="../mathematics/linear_algebra/Theory.html" title="previous page">Theory</a>
     <a class='right-next' id="next-link" href="Image_Filtering.html" title="next page">IMAGE FILTERING</a>
 
     </div>
