--- a/mathematics/Tensors_Review.html
+++ b/mathematics/Tensors_Review.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Linear Algebra" href="linear algebra/intro.html" />
+    <link rel="next" title="Linear Algebra" href="linear_algebra/intro.html" />
     <link rel="prev" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="Timestepping_an_ODE.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -92,7 +92,7 @@
       <a href="">Tensors Review</a>
     </li>
     <li class="">
-      <a href="linear algebra/intro.html">Linear Algebra</a>
+      <a href="linear_algebra/intro.html">Linear_Algebra</a>
     </li>
   </ul>
   </li>
@@ -345,7 +345,7 @@ c_k \mathbf{\hat{e}}_k\cdot\mathbf{\hat{e}}_k=c_k=a_i b_j (\mathbf{\hat{e}}_i\ti
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Timestepping_an_ODE.html" title="previous page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
-    <a class='right-next' id="next-link" href="linear algebra/intro.html" title="next page">Linear Algebra</a>
+    <a class='right-next' id="next-link" href="linear_algebra/intro.html" title="next page">Linear Algebra</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
