--- a/mathematics/linear_algebra/Basic_definitions_and_operations.html
+++ b/mathematics/linear_algebra/Basic_definitions_and_operations.html
@@ -92,7 +92,7 @@
       <a href="../Tensors_Review.html">Tensors Review</a>
     </li>
     <li class="active">
-      <a href="intro.html">Linear Algebra</a>
+      <a href="intro.html">Linear_Algebra</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
@@ -157,7 +157,7 @@
         <!-- ipynb file if we had a myst markdown file -->
         
         <!-- Download raw file -->
-        <a class="dropdown-buttons" href="../../_sources/mathematics/linear algebra/Basic_definitions_and_operations.ipynb"><button type="button"
+        <a class="dropdown-buttons" href="../../_sources/mathematics/linear_algebra/Basic_definitions_and_operations.ipynb"><button type="button"
                 class="btn btn-secondary topbarbtn" title="Download source file" data-toggle="tooltip"
                 data-placement="left">.ipynb</button></a>
         <!-- Download PDF via print -->
@@ -181,7 +181,7 @@
         aria-label="Launch interactive content"><i class="fas fa-rocket"></i></button>
     <div class="dropdown-buttons">
         
-        <a class="binder-button" href="https://mybinder.org/v2/gh/executablebooks/jupyter-book/master?urlpath=tree/mathematics/linear algebra/Basic_definitions_and_operations.ipynb"><button type="button"
+        <a class="binder-button" href="https://mybinder.org/v2/gh/executablebooks/jupyter-book/master?urlpath=tree/mathematics/linear_algebra/Basic_definitions_and_operations.ipynb"><button type="button"
                 class="btn btn-secondary topbarbtn" title="Launch Binder" data-toggle="tooltip"
                 data-placement="left"><img class="binder-button-logo"
                     src="../../_static/images/logo_binder.svg"
