--- a/mathematics/linear_algebra/intro.html
+++ b/mathematics/linear_algebra/intro.html
@@ -92,7 +92,7 @@
       <a href="../Tensors_Review.html">Tensors Review</a>
     </li>
     <li class="active">
-      <a href="">Linear Algebra</a>
+      <a href="">Linear_Algebra</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
@@ -157,7 +157,7 @@
         <!-- ipynb file if we had a myst markdown file -->
         
         <!-- Download raw file -->
-        <a class="dropdown-buttons" href="../../_sources/mathematics/linear algebra/intro.md"><button type="button"
+        <a class="dropdown-buttons" href="../../_sources/mathematics/linear_algebra/intro.md"><button type="button"
                 class="btn btn-secondary topbarbtn" title="Download source file" data-toggle="tooltip"
                 data-placement="left">.md</button></a>
         <!-- Download PDF via print -->
