--- a/genindex.html
+++ b/genindex.html
@@ -166,7 +166,7 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Eigenvalues_and_eigenvectors.html#index-0">Algebraic multiplicity</a>
+      <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-0">Algebraic multiplicity</a>
 </li>
   </ul></td>
 </tr></table>
@@ -174,7 +174,7 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Theory.html#index-3">Basis</a>
+      <li><a href="mathematics/linear_algebra/Theory.html#index-3">Basis</a>
 </li>
   </ul></td>
 </tr></table>
@@ -182,7 +182,7 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Eigenvalues_and_eigenvectors.html#index-1">Geometric multiplicity</a>
+      <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-1">Geometric multiplicity</a>
 </li>
   </ul></td>
 </tr></table>
@@ -190,11 +190,11 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Basic_definitions_and_operations.html#index-3">Inner product</a>
+      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-3">Inner product</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Eigenvalues_and_eigenvectors.html#index-3">Invariants</a>
+      <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-3">Invariants</a>
 </li>
   </ul></td>
 </tr></table>
@@ -202,11 +202,11 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Theory.html#index-1">Linear combination</a>
+      <li><a href="mathematics/linear_algebra/Theory.html#index-1">Linear combination</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Basic_definitions_and_operations.html#index-5">Linear transformation</a>
+      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-5">Linear transformation</a>
 </li>
   </ul></td>
 </tr></table>
@@ -214,11 +214,11 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Basic_definitions_and_operations.html#index-1">Matrix-matrix multiplication</a>
+      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-1">Matrix-matrix multiplication</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Basic_definitions_and_operations.html#index-0">Matrix-vector multiplication</a>
+      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-0">Matrix-vector multiplication</a>
 </li>
   </ul></td>
 </tr></table>
@@ -226,7 +226,7 @@
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Basic_definitions_and_operations.html#index-4">Outer product</a>
+      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-4">Outer product</a>
 </li>
   </ul></td>
 </tr></table>
@@ -238,7 +238,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Basic_definitions_and_operations.html#index-2">Permutations</a>
+      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-2">Permutations</a>
 </li>
   </ul></td>
 </tr></table>
@@ -246,7 +246,7 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Theory.html#index-2">Spanning set</a>
+      <li><a href="mathematics/linear_algebra/Theory.html#index-2">Spanning set</a>
 </li>
   </ul></td>
 </tr></table>
@@ -254,7 +254,7 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Eigenvalues_and_eigenvectors.html#index-2">Trace</a>
+      <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-2">Trace</a>
 </li>
   </ul></td>
 </tr></table>
@@ -262,7 +262,7 @@
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear algebra/Theory.html#index-0">Vector space</a>
+      <li><a href="mathematics/linear_algebra/Theory.html#index-0">Vector space</a>
 </li>
   </ul></td>
 </tr></table>
