--- a/mathematics/intro.html
+++ b/mathematics/intro.html
@@ -92,7 +92,7 @@
       <a href="Tensors_Review.html">Tensors Review</a>
     </li>
     <li class="">
-      <a href="linear algebra/intro.html">Linear Algebra</a>
+      <a href="linear_algebra/intro.html">Linear_Algebra</a>
     </li>
   </ul>
   </li>
