deploy: 3b70a29f6cde30218f7d81b8eb97bdd11dfcc10b

--- a/geosciences/Tides.html
+++ b/geosciences/Tides.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Waves" href="Wave_dispersion.html" />
-    <link rel="prev" title="Dynamic Earth and Planets" href="Dynamic_Earth.html" />
+    <link rel="prev" title="Camera Calibration" href="Camera_Calibration.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -90,6 +90,9 @@
     </li>
     <li class="">
       <a href="Dynamic_Earth.html">Dynamic Earth</a>
+    </li>
+    <li class="">
+      <a href="Camera_Calibration.html">Camera Calibration</a>
     </li>
     <li class="active">
       <a href="">Tides</a>
@@ -489,7 +492,7 @@ where <span class="math notranslate nohighlight">\(\omega_1=\frac{360^\circ}{24.
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Dynamic_Earth.html" title="previous page">Dynamic Earth and Planets</a>
+    <a class='left-prev' id="prev-link" href="Camera_Calibration.html" title="previous page">Camera Calibration</a>
     <a class='right-next' id="next-link" href="Wave_dispersion.html" title="next page">Waves</a>
 
     </div>
