--- a/geosciences/Wave_dispersion.html
+++ b/geosciences/Wave_dispersion.html
@@ -92,6 +92,9 @@
       <a href="Dynamic_Earth.html">Dynamic Earth</a>
     </li>
     <li class="">
+      <a href="Camera_Calibration.html">Camera Calibration</a>
+    </li>
+    <li class="">
       <a href="Tides.html">Tides</a>
     </li>
     <li class="active">
