--- a/geosciences/Dynamic_Earth.html
+++ b/geosciences/Dynamic_Earth.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Tides" href="Tides.html" />
+    <link rel="next" title="Camera Calibration" href="Camera_Calibration.html" />
     <link rel="prev" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -90,6 +90,9 @@
     </li>
     <li class="active">
       <a href="">Dynamic Earth</a>
+    </li>
+    <li class="">
+      <a href="Camera_Calibration.html">Camera Calibration</a>
     </li>
     <li class="">
       <a href="Tides.html">Tides</a>
@@ -834,7 +837,7 @@ Number of points within 2*RMS = 97.10 %.
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Cartography_Cartopy.html" title="previous page">Creating maps in Cartopy</a>
-    <a class='right-next' id="next-link" href="Tides.html" title="next page">Tides</a>
+    <a class='right-next' id="next-link" href="Camera_Calibration.html" title="next page">Camera Calibration</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
