deploy: 372707ebc0379e95bcc6ea043d8de51f3f8a49ea

--- a/mathematics/Big_O_notation.html
+++ b/mathematics/Big_O_notation.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="Timestepping_an_ODE.html" />
-    <link rel="prev" title="Taylor series" href="Taylor_series.html" />
+    <link rel="prev" title="Fractals" href="Fractals.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -81,6 +81,9 @@
     </li>
     <li class="">
       <a href="Taylor_series.html">Taylor Series</a>
+    </li>
+    <li class="">
+      <a href="Fractals.html">Fractals</a>
     </li>
     <li class="active">
       <a href="">Big O Notation</a>
@@ -311,7 +314,7 @@ if for large enough <span class="math notranslate nohighlight">\(n\)</span>, whe
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Taylor_series.html" title="previous page">Taylor series</a>
+    <a class='left-prev' id="prev-link" href="Fractals.html" title="previous page">Fractals</a>
     <a class='right-next' id="next-link" href="Timestepping_an_ODE.html" title="next page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
 
     </div>
