--- a/mathematics/Taylor_series.html
+++ b/mathematics/Taylor_series.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Big O notation" href="Big_O_notation.html" />
+    <link rel="next" title="Fractals" href="Fractals.html" />
     <link rel="prev" title="Introduction to statistics for Geoscientists" href="Statistics_for_Geoscientists.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -81,6 +81,9 @@
     </li>
     <li class="active">
       <a href="">Taylor Series</a>
+    </li>
+    <li class="">
+      <a href="Fractals.html">Fractals</a>
     </li>
     <li class="">
       <a href="Big_O_notation.html">Big O Notation</a>
@@ -416,7 +419,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Statistics_for_Geoscientists.html" title="previous page">Introduction to statistics for Geoscientists</a>
-    <a class='right-next' id="next-link" href="Big_O_notation.html" title="next page">Big O notation</a>
+    <a class='right-next' id="next-link" href="Fractals.html" title="next page">Fractals</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
