--- a/mathematics/linear_algebra/intro.html
+++ b/mathematics/linear_algebra/intro.html
@@ -83,6 +83,9 @@
       <a href="../Taylor_series.html">Taylor Series</a>
     </li>
     <li class="">
+      <a href="../Fractals.html">Fractals</a>
+    </li>
+    <li class="">
       <a href="../Big_O_notation.html">Big O Notation</a>
     </li>
     <li class="">
