deploy: ab07ac1a9e2afbf6594bf1c0a514036a4c7ca483

--- a/genindex.html
+++ b/genindex.html
@@ -152,6 +152,8 @@
 <div class="genindex-jumpbox">
  <a href="#A"><strong>A</strong></a>
  | <a href="#B"><strong>B</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
@@ -175,6 +177,28 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Theory.html#index-3">Basis</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/complex analysis/Introduction.html#index-0">Complex conjugate</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/complex analysis/intro.html#index-0">Complex numbers</a>
+</li>
+      <li><a href="mathematics/complex analysis/compplane.html#index-0">Complex plane</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/complex analysis/compplane.html#index-2">De Moivre&#39;s formula</a>
 </li>
   </ul></td>
 </tr></table>
@@ -220,6 +244,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-0">Matrix-vector multiplication</a>
 </li>
+      <li><a href="mathematics/complex analysis/Introduction.html#index-1">Modulus</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -239,6 +265,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-2">Permutations</a>
+</li>
+      <li><a href="mathematics/complex analysis/compplane.html#index-1">Polar form of complex numbers</a>
 </li>
   </ul></td>
 </tr></table>
