--- a/mathematics/Big_O_notation.html
+++ b/mathematics/Big_O_notation.html
@@ -97,6 +97,9 @@
     <li class="">
       <a href="linear_algebra/intro.html">Linear_Algebra</a>
     </li>
+    <li class="">
+      <a href="complex analysis/intro.html">Complex Analysis</a>
+    </li>
   </ul>
   </li>
   <li class="">
