--- a/mathematics/linear_algebra/Linear_Systems.html
+++ b/mathematics/linear_algebra/Linear_Systems.html
@@ -111,6 +111,9 @@
       </li>
     </ul>
     </li>
+    <li class="">
+      <a href="../complex analysis/intro.html">Complex Analysis</a>
+    </li>
   </ul>
   </li>
   <li class="">
