--- a/coding/Matplotlib.html
+++ b/coding/Matplotlib.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Pandas" href="Pandas.html" />
+    <link rel="next" title="Printing and formatting statements" href="Printing_and_formatting_statements.html" />
     <link rel="prev" title="NumPy Arrays" href="NumPy_Arrays.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -122,13 +122,13 @@
       <a href="">Matplotlib</a>
     </li>
     <li class="">
-      <a href="Pandas.html">Pandas</a>
-    </li>
-    <li class="">
       <a href="Printing_and_formatting_statements.html">Printing And Formatting Statements</a>
     </li>
     <li class="">
       <a href="Importing.html">Importing</a>
+    </li>
+    <li class="">
+      <a href="Pandas/intro.html">Pandas</a>
     </li>
   </ul>
   </li>
@@ -478,7 +478,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="NumPy_Arrays.html" title="previous page">NumPy Arrays</a>
-    <a class='right-next' id="next-link" href="Pandas.html" title="next page">Pandas</a>
+    <a class='right-next' id="next-link" href="Printing_and_formatting_statements.html" title="next page">Printing and formatting statements</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
