--- a/coding/Printing_and_formatting_statements.html
+++ b/coding/Printing_and_formatting_statements.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Importing in Python" href="Importing.html" />
-    <link rel="prev" title="Pandas" href="Pandas.html" />
+    <link rel="prev" title="Plotting data with Matplotlib" href="Matplotlib.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -121,14 +121,14 @@
     <li class="">
       <a href="Matplotlib.html">Matplotlib</a>
     </li>
-    <li class="">
-      <a href="Pandas.html">Pandas</a>
-    </li>
     <li class="active">
       <a href="">Printing And Formatting Statements</a>
     </li>
     <li class="">
       <a href="Importing.html">Importing</a>
+    </li>
+    <li class="">
+      <a href="Pandas/intro.html">Pandas</a>
     </li>
   </ul>
   </li>
@@ -448,7 +448,7 @@ This fossil is 12 cm long and   5.0500 cm wide.
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Pandas.html" title="previous page">Pandas</a>
+    <a class='left-prev' id="prev-link" href="Matplotlib.html" title="previous page">Plotting data with Matplotlib</a>
     <a class='right-next' id="next-link" href="Importing.html" title="next page">Importing in Python</a>
 
     </div>
