--- a/coding/NumPy_Arrays.html
+++ b/coding/NumPy_Arrays.html
@@ -122,13 +122,13 @@
       <a href="Matplotlib.html">Matplotlib</a>
     </li>
     <li class="">
-      <a href="Pandas.html">Pandas</a>
-    </li>
-    <li class="">
       <a href="Printing_and_formatting_statements.html">Printing And Formatting Statements</a>
     </li>
     <li class="">
       <a href="Importing.html">Importing</a>
+    </li>
+    <li class="">
+      <a href="Pandas/intro.html">Pandas</a>
     </li>
   </ul>
   </li>
