--- a/genindex.html
+++ b/genindex.html
@@ -154,6 +154,7 @@
  | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
+ | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
@@ -163,6 +164,7 @@
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#V"><strong>V</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="A">A</h2>
@@ -184,10 +186,14 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/complex analysis/Introduction.html#index-0">Complex conjugate</a>
+      <li><a href="geosciences/Cartography_Cartopy.html#index-0">Cartopy</a>
+</li>
+      <li><a href="geosciences/Cartography_Cartopy.html#index-1">Cartopy: plotting shapefiles</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/complex analysis/Introduction.html#index-0">Complex conjugate</a>
+</li>
       <li><a href="mathematics/complex analysis/intro.html#index-0">Complex numbers</a>
 </li>
       <li><a href="mathematics/complex analysis/compplane.html#index-0">Complex plane</a>
@@ -199,6 +205,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/complex analysis/compplane.html#index-2">De Moivre&#39;s formula</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/Fractals.html#index-0">Fractals</a>
 </li>
   </ul></td>
 </tr></table>
@@ -260,11 +274,35 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Pandas.html#index-0">Pandas</a>
+      <li><a href="coding/Pandas/Pandas_2filter_select_assign.html#index-2">Pandas: assigning</a>
+</li>
+      <li><a href="coding/Pandas/Pandas_1basics.html#index-0">Pandas: basics</a>
+</li>
+      <li><a href="coding/Pandas/Pandas_3merge_combine_group_sort.html#index-1">Pandas: combining</a>
+</li>
+      <li><a href="coding/Pandas/Pandas_5time_stamps.html#index-0">Pandas: date-time stamps</a>
+</li>
+      <li><a href="coding/Pandas/Pandas_2filter_select_assign.html#index-0">Pandas: filtering</a>
+</li>
+      <li><a href="coding/Pandas/Pandas_3merge_combine_group_sort.html#index-2">Pandas: grouping</a>
+</li>
+      <li><a href="coding/Pandas/Pandas_3merge_combine_group_sort.html#index-0">Pandas: merging</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Pandas/Pandas_6plotting.html#index-0">Pandas: plotting</a>
+</li>
+      <li><a href="coding/Pandas/Pandas_1basics.html#index-1">Pandas: reading and writing files</a>
+</li>
+      <li><a href="coding/Pandas/Pandas_2filter_select_assign.html#index-1">Pandas: selecting</a>
+</li>
+      <li><a href="coding/Pandas/Pandas_3merge_combine_group_sort.html#index-3">Pandas: sorting</a>
+</li>
+      <li><a href="coding/Pandas/Pandas_4summary_statistics.html#index-0">Pandas: summary stats</a>
+</li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-2">Permutations</a>
+</li>
+      <li><a href="geosciences/Dynamic_Earth.html#index-0">Plate tectonics</a>
 </li>
       <li><a href="mathematics/complex analysis/compplane.html#index-1">Polar form of complex numbers</a>
 </li>
@@ -274,7 +312,13 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="geosciences/Dynamic_Earth.html#index-1">Seafloor age</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Theory.html#index-2">Spanning set</a>
+</li>
+      <li><a href="mathematics/Statistics_for_Geoscientists.html#index-0">Statistics: basics</a>
 </li>
   </ul></td>
 </tr></table>
@@ -282,6 +326,12 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="geosciences/Tides.html#index-1">Tidal frequencies</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="geosciences/Tides.html#index-0">Tides</a>
+</li>
       <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-2">Trace</a>
 </li>
   </ul></td>
@@ -291,6 +341,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Theory.html#index-0">Vector space</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="geosciences/Wave_dispersion.html#index-0">Wave dispersion</a>
 </li>
   </ul></td>
 </tr></table>
